<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/black"
  tools:context=".GeneralInfoActivity">

  <!-- Allows the users to scroll through the a fighter's details  -->
  <ScrollView
    android:id="@+id/info_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        android:id="@+id/info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/smashfont"
        android:gravity="center|top"
        android:text="@string/game_title"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <ImageView
        android:id="@+id/cover_image"
        android:layout_width="169dp"
        android:layout_height="234dp"
        android:contentDescription="@string/cover_image_description"
        android:foregroundGravity="center"
        android:src="@drawable/cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_title" />

      <TextView
        android:id="@+id/overview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/red"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/smashfont"
        android:gravity="center"
        android:text="@string/overview_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cover_image" />

      <TextView
        android:id="@+id/overview_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/overview_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overview_title" />

      <TextView
        android:id="@+id/gameplay_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/red"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/smashfont"
        android:gravity="center"
        android:text="@string/gameplay_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overview_text" />

      <TextView
        android:id="@+id/gameplay_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/gameplay_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameplay_title" />

      <ImageView
        android:id="@+id/gameplay_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gameplayy_image_description"
        android:foregroundGravity="center"
        android:src="@drawable/gameplay"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameplay_text" />

      <TextView
        android:id="@+id/fighters_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/red"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/smashfont"
        android:gravity="center"
        android:text="@string/fighters_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameplay_image" />

      <TextView
        android:id="@+id/fighters_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/fighters_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fighters_title" />

      <ImageView
        android:id="@+id/fighter_selection_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/fighter_selection_description"
        android:foregroundGravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:src="@drawable/fighters_selection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fighters_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>